Added Google Calender at footer of index page

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             <h2>School</h2>
             <p>School Information</p>
         </div>
+        <!-- Google Calendar Embed -->
+        <div class="calendar-embed">
+            <iframe src="https://calendar.google.com/calendar/embed?src=a9ccdb92850282dcfa9993cd2f00e0991e81369602f093463f10a4383bb68b5e%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="400" height="300" frameborder="0" scrolling="no"></iframe>
+        </div>
     </footer>
 
 </body>
