Adding more information to Introduction, Eligibility, and Degree Info
Adding more information to Program Introduction, Eligibility, and Degree Information.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                 <p>The Atlantis Dual Degree Program offers 2 degrees for prospective students: A DePaul CDM Degree, and a Business Degree from Linkoping in Sweden. During your Junior year, you will spend your
                     fall semester in Lyon, France at the BBA INSEEC taking business courses there. In your spring semester, you will travel to Linköping, Sweden to take business classes at Linköping University.
                     Once you are done with your junior year, you will be awarded a Business Degree, and you will return to the US to finish your CDM degree in your senior year, earning your second degree from
-                    the program.
-                </p>
+                    the program.</p>
             </div>
             <div class="degree-information-image">
                 <img src="1200px-Test-Logo.png" alt="Degree Information Image">
