Added aditional info to apply page

--- a/apply.html
+++ b/apply.html
@@ -38,7 +38,7 @@
                     2) Search for “Atlantis” on the site <br>
                     3) State Deadline: February 15 (other programs have a Feb 1 deadline)<br><br>
 
-                    You can contact Cara Miller for more info about the study abroad program 
+                    You can contact Cara Miller for more info about visa, housing, and cost for the study abroad program.
                     <br> Cara Miller's email: cmille12@depaul.edu
                     
 
