--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="timeline.html">Application Timeline</a></li>
                 <li><a href="apply.html">Apply</a></li>
                 <li><a href="alumni.html">Alumni</a></li>
+                <li><a href="help.html">Help</a></li>
             </ul>
         </nav>
     </header>
