--- a/alumni.html
+++ b/alumni.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="styles.css">
-    <title>Atlantis Dual Degree Program - Alumni</title>
+    <title>Help - Atlantis Dual Degree Program</title>
 </head>
 <body>
 
@@ -16,13 +16,18 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="timeline.html">Application Timeline</a></li>
-                <li><a href="apply.html">Apply</a></li>
+                <li class="dropdown"><strong>Application Info</strong>
+                    <div class="dropdown-content">
+                        <a href="apply.html">Apply</a>
+                        <a href="timeline.html">Application Timeline</a>
+                    </div>
+                </li>
                 <li><a href="alumni.html">Alumni</a></li>
                 <li><a href="help.html">Help</a></li>
             </ul>
         </nav>
     </header>
+
 
     <div class="main-content">
         <h2 class="center-heading">Alumni</h2>
