Added Basic info to Atlantis time line

--- a/timeline.html
+++ b/timeline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="styles.css">
-    <title>Help - Atlantis Dual Degree Program</title>
+    <title>Atlantis Dual Degree Program Timeline</title>
 </head>
 <body>
 
@@ -29,33 +29,94 @@
     </header>
 
     <div class="main-content">
-        <h2 class="timeline-heading">Application Timeline</h2>
+        <h2 class="timeline-heading">Atlantis Timeline</h2>
         <div class="vertical-timeline">
             <div class="timeline-item">
                 <div class="timeline-box">
-                    <h3>Application Stage 1</h3>
-                    <p>Description of the stage</p>
-                    <p class="deadline">Deadline 1</p>
+                    <h3>Student application deadline</h3>
+                    <p>Feb 1</p>
                 </div>
             </div>
             <div class="timeline-item">
+                <div class="timeline-point"></div>
                 <div class="timeline-box">
-                    <h3>Application Stage 2</h3>
-                    <p>Description of the stage</p>
-                    <p class="deadline">Deadline 2</p>
+                    <h3>Cara to touch base with the DPU Atlantis Program Director on complete applications</h3>
+                    <p>Feb 2</p>
                 </div>
             </div>
             <div class="timeline-item">
+                <div class="timeline-point"></div>
                 <div class="timeline-box">
-                    <h3>Application Stage 3</h3>
-                    <p>Description of the stage</p>
-                    <p class="deadline">Deadline 3</p>
+                    <h3>DPU Atlantis Program Director sends admissions decisions to Study Abroad Advisor</h3>
+                    <p>Feb 14</p>
                 </div>
             </div>
-            <!-- Add more timeline items as needed -->
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>Study Abroad Advisor sends students admissions notification; note: assuming Dean of Students clearance</h3>
+                    <p>Feb 15</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>DePaul Study Abroad sends students scholarship notifications</h3>
+                    <p>Feb 20</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>Cara will host Next Steps meeting for students to explain cost, passport, visa process, and how to commit</h3>
+                    <p>Feb 21</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>Students confirm participation via online commitment</h3>
+                    <p>March 1</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>Touch base with the DPU Atlantis Program Director on final student list and/or waitlist process</h3>
+                    <p>March 2</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>Study Abroad will host general orientation for all study abroad students, including Atlantis</h3>
+                    <p>April/May</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>DePaul-Atlantis program director hosts a program-specific pre-departure orientation for Atlantis students</h3>
+                    <p>April/May</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>Begin studies at INSEEC</h3>
+                    <p>August [specific date TBD]</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-point"></div>
+                <div class="timeline-box">
+                    <h3>Classes Start at Linkoping</h3>
+                    <p>January [specific date TBD]</p>
+                </div>
+            </div>
         </div>
     </div>
-
+    
     <footer>
         <div class="footer-section">
             <h2>Director info</h2>
@@ -81,6 +142,5 @@
             <iframe src="https://calendar.google.com/calendar/embed?src=a9ccdb92850282dcfa9993cd2f00e0991e81369602f093463f10a4383bb68b5e%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="400" height="300" frameborder="0" scrolling="no"></iframe>
         </div>
     </footer>
-
 </body>
 </html>
