Added dropdown for each country page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                         <a href="timeline.html">Application Timeline</a>
                     </div>
                 </li>
+                <li class="dropdown"><strong>Countries</strong>
+                    <div class="dropdown-content">
+                        <a href="USA.html">USA</a>
+                        <a href="France.html">France</a>
+                        <a href="Sweden.html">Sweden</a>
+                    </div>
+                </li>
                 <li><a href="alumni.html">Alumni</a></li>
                 <li><a href="help.html">Help</a></li>
             </ul>
