Added France page

--- a/France.html
+++ b/France.html
@@ -38,7 +38,7 @@
 
     <div class="main-content">
         <h2 class="france-heading">F<span>r</span><span>a</span><span>n</span><span>c</span><span>e</span></h2>
-        <h3 class="france-heading"><img src="INSEEC.jpg" alt="INSEEC"></h3>
+        <h3 class="france-heading"><img src="INSEEC.jpg" alt="INSEEC" width="1000" height="500"></h3>
 
         <p>DePaul students will be attending BBA INSEEC, a business college, at the campus located in the city of Lyon, France. During your Junior year, you will spend your fall semester in Lyon, France at the 
             BBA INSEEC taking business courses there. You will take 7 classes during your time there, and you must PASS all six business courses to get your Linköping degree. All seven courses count toward
