Added France page

--- a/France.html
+++ b/France.html
@@ -47,24 +47,24 @@
                 <li>Organizational Behavior - The purpose of this course is to enable students to analyze and influence repeated patterns of action in groups and organizations. Specifically, this course, 
                     helps the students to understand organizational behavior theory and phenomena from different perspectives (psychology, social neurosciences, anthropology, organization theories…), critically 
                     evaluate human actions (group/individual) within an organization, and apply this knowledge to managerial and organizational situations.</li>
-                <li>Finance in a Flat World - The course offers an introduction to the main topics of financial theory applied to the corporate environment. Emphasis is placed on making decisions which 
+                <p><li>Finance in a Flat World - The course offers an introduction to the main topics of financial theory applied to the corporate environment. Emphasis is placed on making decisions which 
                     increase shareholder wealth. The key concepts covered include Capital Structure Theory, the Cost of Capital, Measuring Risk, Valuation Models, Capital Budgeting, Cash Flow Forecasting, 
-                    and International Finance</li>
-                <li>Marketing in a Flat World - The objective of this course is to familiarize students with the contemporary trends in the field of international marketing. The theoretical concepts covered 
+                    and International Finance</li></p>
+                <p><li>Marketing in a Flat World - The objective of this course is to familiarize students with the contemporary trends in the field of international marketing. The theoretical concepts covered 
                     in the lectures are linked with applicable exercises in the form of seminars. The seminars are conducted using interactive pedagogical teaching methods (case studies, discussions, teamwork, 
-                    oral presentations and writing assignments, etc.).</li>
-                <li>Information Systems Management - This course presents management concepts that lead to an understanding of Information Technology (I.T.) and its evolving role within the global enterprise. 
+                    oral presentations and writing assignments, etc.).</li></p>
+                <p><li>Information Systems Management - This course presents management concepts that lead to an understanding of Information Technology (I.T.) and its evolving role within the global enterprise. 
                     The major objective of this course is to provide students with the necessary knowledge on how information technology supports & enables business strategy & effective business processes 
                     Business students will be introduced to the methodologies for the design, implementation & functionality of today's business information systems. Knowledge transfer will be accomplished 
-                    with a mixture of lecture, case study and class projects.</li>
-                <li>Business Game Strategy - Help contribute to the big picture at the organization and remain competitive in today's global marketplace by building a solid understanding of key business and 
+                    with a mixture of lecture, case study and class projects.</li></p>
+                <p><li>Business Game Strategy - Help contribute to the big picture at the organization and remain competitive in today's global marketplace by building a solid understanding of key business and 
                     management principles. Learn the fundamentals about how to create a winning strategy and lead a team to deliver it. From understanding what strategy can do for the company, through to 
                     creating a strategy and engaging others with the company's main strategy. How to use a business case to define an opportunity, identify and analyze alternatives, and present your final 
                     recommendation to key stakeholders, including how to: Clearly define the opportunity you'll want to address in your business case, Identify and analyze a range of alternatives, 
-                    Recommend one option and assess its risks, Create a high-level implementation plan for your proposed alternative, and communicate your case to key stakeholders.</li>
-                <li>French for International Students - Learning the basics in French, in order to react in simple everyday situations. The course focuses on the development of oral skills, while studying French 
-                    culture, way of life, and civilization. Students work together during class to understand documents, answer questions, discuss findings and practice what is being learnt.</li>
-                <li>Research Methodology - Train for academic business research, Prepare for the LIU experience, and gain experience in research and peer review in a multicultural environment.</li>
+                    Recommend one option and assess its risks, Create a high-level implementation plan for your proposed alternative, and communicate your case to key stakeholders.</li></p>
+                <p><li>French for International Students - Learning the basics in French, in order to react in simple everyday situations. The course focuses on the development of oral skills, while studying French 
+                    culture, way of life, and civilization. Students work together during class to understand documents, answer questions, discuss findings and practice what is being learnt.</li></p>
+                <p><li>Research Methodology - Train for academic business research, Prepare for the LIU experience, and gain experience in research and peer review in a multicultural environment.</li></p>
               </ul></p>
     </div>
 
