--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!-- /*-------------------------------------------------------------------------*
+*---									
+*---        Index.html						
+*---									
+*---            This is the start of the app, it's the first code that runs.
+*---        See that it calls main.jsx, the next file to be called in order. 
+*---	   		
+*---	----	----	----	----	----	----	----	----	---*
+*---									
+*---        Version 1.0     2024 March 21st     	  	
+*---		       	
+*---		    Michael Cullen
+*---            		
+*-------------------------------------------------------------------------*/ -->
+
 <!doctype html>
 <html lang="en">
   <head>
